[tool.poetry]
name = "graph-garden"
version = "0.1.0"
description = "Python library for managing ArangoDB instance"
authors = ["Roman Inflianskas <infroma@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/ldtoolkit/graph-garden"
repository = "https://github.com/ldtoolkit/graph-garden"
keywords = ["arangodb"]
classifiers = [
    "Topic :: Database",
]

[tool.poetry.scripts]                                                                                                  
graph-garden = "graph_garden.cli:app"

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
circus = "^0.16.1"
python-arango = "^6.0.0"
psutil = "^5.7.2"
pySmartDL = "^1.3.3"
beautifulsoup4 = "^4.9.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
